fixed webkit-scrollbar-width in google-custom-pages

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -109,10 +109,10 @@
 
 ::-webkit-scrollbar-thumb{
   margin: 1px !important;
-  border: 2px solid transparent;
-  width: 5px !important;
+  border: 2px solid transparent !important;
+  width: 1px !important;
   background-color: rgba(0,0,0,.4) !important;
-  z-index: 9999;
+  z-index: 2147483647; // 0x7fffffff
   -webkit-border-radius: 12px;
 
   background-clip: content-box;
@@ -132,10 +132,8 @@
 
 ::-webkit-scrollbar-thumb:hover{
   background-color: rgba(0,0,0,.8) !important;
-  border: 2px solid transparent;
 }
 ::-webkit-scrollbar-thumb:active {
   background-color: rgba(0,0,0,.6) !important;
-  border: 2px solid transparent;
 }
 
